package com.tca.designpattern.creation.factory.abstractfactory03;


/**
 * @author zhouan
 * @Date 2021-01
 */
public interface IPizza {

    /**
     * 类型
	 * @return
     */
	String type();

}
